@@ -1,5 +1,14 @@
 2005-03-08  Mark McLoughlin  <mark@skynet.ie>
 
+	Fix bug #168336 - weirdness with .desktop files which
+	use [KDE Desktop Entry] as the main group.
+
+	* libmenu/desktop-entries.c: (get_flags_from_key_file),
+	(get_categories_from_key_file): use the actual desktop
+	entry group name.
+
+2005-03-08  Mark McLoughlin  <mark@skynet.ie>
+
 	Should fix bug #167934 even though the reporter
 	says it doesn't :-)
 
